<resources>
    <string name="app_name">Droid Cafe Input</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="order_text">TextView</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="note_label">Note</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chocolate_syrup">Chocolate syrup</string>
    <string name="sprinkles">Sprinkle«s</string>
    <string name="crushed_nuts">Crushed nuts</string>
    <string name="cherries">Cherries</string>
    <string name="orio_cookie_crumbles">Orio cookie crumbles</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
