<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderActivity">

    <TextView
            android:text="@string/order_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_textview"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/name_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_label"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/order_textview"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_text"
            android:hint="@string/enter_name_hint"
            app:layout_constraintStart_toEndOf="@+id/name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/address_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            android:layout_marginTop="24dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textPersonName"
            android:ems="10"
            android:id="@+id/address_text"
            android:hint="@string/enter_address_hint"
            app:layout_constraintStart_toEndOf="@+id/address_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/address_label"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/address_label"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            app:layout_constraintStart_toEndOf="@+id/phone_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/phone_label"
            android:id="@+id/phone_text"
            android:hint="@string/enter_phone_hint"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/note_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_label"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:ems="10"
            android:id="@+id/note_text"
            app:layout_constraintStart_toEndOf="@+id/note_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/note_label"
            android:layout_marginStart="24dp"
            android:hint="@string/enter_note_hint"/>
    <TextView
            android:text="@string/choose_delivery_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delivery_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/note_label"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="vertical"
            android:checkedButton="@+id/nextday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delivery_label" android:id="@+id/radioGroup">

        <RadioButton
                android:id="@+id/sameday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/same_day_messenger_service"/>

        <RadioButton
                android:id="@+id/nextday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/next_day_ground_delivery"/>

        <RadioButton
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pick_up"/>
    </RadioGroup>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_spinner"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phone_text"
            app:layout_constraintTop_toBottomOf="@+id/address_text"
            android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/enter_phone_hint"
            android:imeOptions="actionSend"
            android:ems="10"
            android:id="@+id/send_phone_text"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
    <CheckBox
            android:text="@string/chocolate_syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/send_phone_text"/>
    <CheckBox
            android:text="@string/sprinkles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/check_box_1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <CheckBox
            android:text="@string/crushed_nuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/check_box_2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <CheckBox
            android:text="@string/cherries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/check_box_3"/>
    <CheckBox
            android:text="@string/orio_cookie_crumbles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_box_5" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/check_box_4"/>

</android.support.constraint.ConstraintLayout>
